--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -331,8 +331,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "address = None"
